--- a/pom.xml
+++ b/pom.xml
@@ -14,7 +14,7 @@
 	<developers>
 		<developer>
 			<name>Axel Vatan AKA Axeldu18</name>
-			<url>http://axelvatan.asylyus.fr/</url>
+			<url>https://axelvatan.fr/</url>
 		</developer>
 	</developers>
 
