--- a/core/pom.xml
+++ b/core/pom.xml
@@ -51,6 +51,10 @@
 
 	<repositories>
 		<repository>
+    		<id>jitpack.io</id>
+    		<url>https://jitpack.io</url>
+		</repository>
+		<repository>
 			<id>maven-repo</id>
 			<url>https://repo1.maven.org/maven2/</url>
 		</repository>
