--- a/core/pom.xml
+++ b/core/pom.xml
@@ -47,6 +47,11 @@
 			<artifactId>java-express</artifactId>
 			<version>0.2.1</version>
     	</dependency>
+    	<dependency>
+		    <groupId>org.mindrot</groupId>
+		    <artifactId>jbcrypt</artifactId>
+		    <version>0.4</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
