--- a/pom.xml
+++ b/pom.xml
@@ -14,6 +14,7 @@
 		<module>votes</module>
 		<module>boutique</module>
 		<module>monitoring</module>
+		<module>news</module>
 	</modules>
 
 </project>
