--- a/core/src/main/resources/plugin.yml
+++ b/core/src/main/resources/plugin.yml
@@ -3,3 +3,8 @@ main: fr.AxelVatan.CMWLink.Spigot.SpigotMain
 version: 1.0
 author: AxelVatan
 description: CraftMyWebsite-Link a java plugin for MC servers
+commands:
+   cmwl:
+      description: Commande principale du plugin
+      usage: /cmwl
+      permission: cmwl.help
