--- a/core/pom.xml
+++ b/core/pom.xml
@@ -52,6 +52,11 @@
 		    <artifactId>jbcrypt</artifactId>
 		    <version>0.4</version>
 		</dependency>
+		<dependency>
+			<groupId>io.netty</groupId>
+			<artifactId>netty-all</artifactId>
+			<version>4.1.77.Final</version>
+		</dependency>
 	</dependencies>
 
 	<repositories>
