--- a/core/pom.xml
+++ b/core/pom.xml
@@ -74,6 +74,11 @@
 			<version>1.0</version>
 		</dependency>
 		<dependency>
+			<groupId>fr.AxelVatan.CraftMyWebsite.CMWL</groupId>
+			<artifactId>v1_19_R3</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
 			<groupId>org.projectlombok</groupId>
 			<artifactId>lombok</artifactId>
 			<version>1.18.26</version>
@@ -82,7 +87,7 @@
 		<dependency>
 			<groupId>org.spigotmc</groupId>
 			<artifactId>spigot</artifactId>
-			<version>1.19.3-R0.1-SNAPSHOT</version>
+			<version>1.19.4-R0.1-SNAPSHOT</version>
 			<scope>provided</scope>
 		</dependency>
 		<dependency>
