--- a/pom.xml
+++ b/pom.xml
@@ -20,6 +20,7 @@
 		<module>v1_18_R1</module>
 		<module>v1_18_R2</module>
 		<module>v1_19_R1</module>
+		<module>v1_20_R1</module>
 		
 		<module>core</module>
 		<module>votes</module>
