--- a/core/pom.xml
+++ b/core/pom.xml
@@ -75,6 +75,11 @@
 		</dependency>
 		<dependency>
 			<groupId>fr.AxelVatan.CraftMyWebsite.CMWL</groupId>
+			<artifactId>v1_19_R2</artifactId>
+			<version>1.0</version>
+		</dependency>
+		<dependency>
+			<groupId>fr.AxelVatan.CraftMyWebsite.CMWL</groupId>
 			<artifactId>v1_19_R3</artifactId>
 			<version>1.0</version>
 		</dependency>
