--- a/shop/src/main/resources/package.yml
+++ b/shop/src/main/resources/package.yml
@@ -4,4 +4,4 @@ sp_main: fr.CraftMyWebsite.CMWLink.Shop.SP.Main
 bg_main: fr.CraftMyWebsite.CMWLink.Shop.BG.Main
 vl_main: fr.CraftMyWebsite.CMWLink.Shop.VL.Main
 version: 1.0
-author: AxelVatan@Teyir
+author: AxelVatan&Teyir
