[IMPROVES] Add Core & Votes Velocity support

--- a/votes/src/main/resources/package.yml
+++ b/votes/src/main/resources/package.yml
@@ -4,4 +4,4 @@ sp_main: fr.CraftMyWebsite.CMWLink.Votes.SP.Main
 bg_main: fr.CraftMyWebsite.CMWLink.Votes.BG.Main
 vl_main: fr.CraftMyWebsite.CMWLink.Votes.VL.Main
 version: 1.0
-author: AxelVatan
+author: AxelVatan&Teyir
