--- a/votes/pom.xml
+++ b/votes/pom.xml
@@ -10,8 +10,6 @@
 
 	<name>CMWL_Votes</name>
 
-
-
 	<properties>
 	    <maven.compiler.source>11</maven.compiler.source>
 	    <maven.compiler.target>11</maven.compiler.target>
@@ -45,7 +43,7 @@
         <dependency>
         	<groupId>com.velocitypowered</groupId>
         	<artifactId>velocity-api</artifactId>
-        	<version>3.1.1</version>
+        	<version>3.3.0-SNAPSHOT</version>
         	<scope>provided</scope>
     	</dependency>
 		<dependency>
